[package]
name = "rsfdisk-sys"
description = "Raw FFI bindings to the `util-linux/libfdisk` C library"
version = "0.2.0"
authors = ["Nick Piaddo <nick.piaddo@protonmail.com>"]
license = "Apache-2.0 OR MIT"
rust-version = "1.72"
repository = "https://github.com/nickpiaddo/rsfdisk-sys"
homepage = "https://github.com/nickpiaddo/rsfdisk-sys"
documentation = "https://docs.rs/rsfdisk-sys"
readme = "crates-io.md"
keywords = ["ffi", "bindings", "libfdisk"]
categories = ["external-ffi-bindings", "os"]
edition = "2021"
exclude = ["web-snapshots/*"]
build = "build/build.rs"
links = "fdisk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.66.1"
cc = "1.1.28"
pkg-config = "0.3.30"
